src/logoparsing/LogoParser.java
// $ANTLR 3.3 Nov 30, 2010 12:50:56 D:\\workspace\\tp2\\src\\logoparsing\\Logo.g 2012-06-02 12:04:22

  package logoparsing;
  import logogui.Log;
  import java.util.Hashtable;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class LogoParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "PROGRAMME", "AV", "TD", "TG", "REC", "CO", "CF", "PO", "PF", "FPOS", "FCAP", "VE", "LC", "BC", "FCC", "PLUS", "MOINS", "MULT", "DIV", "EXP", "SUP", "INF", "EQU", "SUPEQU", "INFEQU", "SI", "DONNE", "QUOT", "COLON", "REPETE", "TANTQUE", "LET", "ID", "INT", "WS"
    };
    public static final int EOF=-1;
    public static final int PROGRAMME=4;
    public static final int AV=5;
    public static final int TD=6;
    public static final int TG=7;
    public static final int REC=8;
    public static final int CO=9;
    public static final int CF=10;
    public static final int PO=11;
    public static final int PF=12;
    public static final int FPOS=13;
    public static final int FCAP=14;
    public static final int VE=15;
    public static final int LC=16;
    public static final int BC=17;
    public static final int FCC=18;
    public static final int PLUS=19;
    public static final int MOINS=20;
    public static final int MULT=21;
    public static final int DIV=22;
    public static final int EXP=23;
    public static final int SUP=24;
    public static final int INF=25;
    public static final int EQU=26;
    public static final int SUPEQU=27;
    public static final int INFEQU=28;
    public static final int SI=29;
    public static final int DONNE=30;
    public static final int QUOT=31;
    public static final int COLON=32;
    public static final int REPETE=33;
    public static final int TANTQUE=34;
    public static final int LET=35;
    public static final int ID=36;
    public static final int INT=37;
    public static final int WS=38;

    // delegates
    // delegators


        public LogoParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public LogoParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return LogoParser.tokenNames; }
    public String getGrammarFileName() { return "D:\\workspace\\tp2\\src\\logoparsing\\Logo.g"; }


      boolean valide = true;
      public boolean getValide(){
      return valide;
     }
     
     public void setValide(boolean v){
       valide = v;
     }
     
     Hashtable<String, Double> tabVar;
     public void setTabVar(Hashtable<String, Double> t){
      tabVar = t;
     }


    public static class programme_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "programme"
    // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:67:1: programme : liste_instructions -> ^( PROGRAMME liste_instructions ) ;
    public final LogoParser.programme_return programme() throws RecognitionException {
        LogoParser.programme_return retval = new LogoParser.programme_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        LogoParser.liste_instructions_return liste_instructions1 = null;


        RewriteRuleSubtreeStream stream_liste_instructions=new RewriteRuleSubtreeStream(adaptor,"rule liste_instructions");
        try {
            // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:67:11: ( liste_instructions -> ^( PROGRAMME liste_instructions ) )
            // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:67:13: liste_instructions
            {
            pushFollow(FOLLOW_liste_instructions_in_programme411);
            liste_instructions1=liste_instructions();

            state._fsp--;

            stream_liste_instructions.add(liste_instructions1.getTree());


            // AST REWRITE
            // elements: liste_instructions
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 67:32: -> ^( PROGRAMME liste_instructions )
            {
                // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:67:35: ^( PROGRAMME liste_instructions )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(PROGRAMME, "PROGRAMME"), root_1);

                adaptor.addChild(root_1, stream_liste_instructions.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "programme"

    public static class liste_instructions_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "liste_instructions"
    // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:70:1: liste_instructions : ( instruction )+ ;
    public final LogoParser.liste_instructions_return liste_instructions() throws RecognitionException {
        LogoParser.liste_instructions_return retval = new LogoParser.liste_instructions_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        LogoParser.instruction_return instruction2 = null;



        try {
            // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:70:20: ( ( instruction )+ )
            // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:70:22: ( instruction )+
            {
            root_0 = (Object)adaptor.nil();

            // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:70:22: ( instruction )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( ((LA1_0>=AV && LA1_0<=REC)||(LA1_0>=FPOS && LA1_0<=FCC)||(LA1_0>=SI && LA1_0<=DONNE)||(LA1_0>=REPETE && LA1_0<=TANTQUE)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:70:23: instruction
            	    {
            	    pushFollow(FOLLOW_instruction_in_liste_instructions429);
            	    instruction2=instruction();

            	    state._fsp--;

            	    adaptor.addChild(root_0, instruction2.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "liste_instructions"

    public static class sous_liste_instr_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "sous_liste_instr"
    // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:73:1: sous_liste_instr : CO liste_instructions -> ^( CO liste_instructions ) ;
    public final LogoParser.sous_liste_instr_return sous_liste_instr() throws RecognitionException {
        LogoParser.sous_liste_instr_return retval = new LogoParser.sous_liste_instr_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token CO3=null;
        LogoParser.liste_instructions_return liste_instructions4 = null;


        Object CO3_tree=null;
        RewriteRuleTokenStream stream_CO=new RewriteRuleTokenStream(adaptor,"token CO");
        RewriteRuleSubtreeStream stream_liste_instructions=new RewriteRuleSubtreeStream(adaptor,"rule liste_instructions");
        try {
            // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:73:18: ( CO liste_instructions -> ^( CO liste_instructions ) )
            // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:73:20: CO liste_instructions
            {
            CO3=(Token)match(input,CO,FOLLOW_CO_in_sous_liste_instr440);  
            stream_CO.add(CO3);

            pushFollow(FOLLOW_liste_instructions_in_sous_liste_instr442);
            liste_instructions4=liste_instructions();

            state._fsp--;

            stream_liste_instructions.add(liste_instructions4.getTree());


            // AST REWRITE
            // elements: liste_instructions, CO
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 73:42: -> ^( CO liste_instructions )
            {
                // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:73:45: ^( CO liste_instructions )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(stream_CO.nextNode(), root_1);

                adaptor.addChild(root_1, stream_liste_instructions.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "sous_liste_instr"

    public static class expr_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "expr"
    // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:76:1: expr : sumExpr ;
    public final LogoParser.expr_return expr() throws RecognitionException {
        LogoParser.expr_return retval = new LogoParser.expr_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        LogoParser.sumExpr_return sumExpr5 = null;



        try {
            // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:76:6: ( sumExpr )
            // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:76:8: sumExpr
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_sumExpr_in_expr459);
            sumExpr5=sumExpr();

            state._fsp--;

            adaptor.addChild(root_0, sumExpr5.getTree());

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "expr"

    public static class sumExpr_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "sumExpr"
    // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:78:1: sumExpr : multExpr ( ( PLUS | MOINS ) multExpr )* ;
    public final LogoParser.sumExpr_return sumExpr() throws RecognitionException {
        LogoParser.sumExpr_return retval = new LogoParser.sumExpr_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token PLUS7=null;
        Token MOINS8=null;
        LogoParser.multExpr_return multExpr6 = null;

        LogoParser.multExpr_return multExpr9 = null;


        Object PLUS7_tree=null;
        Object MOINS8_tree=null;

        try {
            // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:78:8: ( multExpr ( ( PLUS | MOINS ) multExpr )* )
            // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:78:10: multExpr ( ( PLUS | MOINS ) multExpr )*
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_multExpr_in_sumExpr467);
            multExpr6=multExpr();

            state._fsp--;

            adaptor.addChild(root_0, multExpr6.getTree());
            // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:78:19: ( ( PLUS | MOINS ) multExpr )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( ((LA3_0>=PLUS && LA3_0<=MOINS)) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:78:20: ( PLUS | MOINS ) multExpr
            	    {
            	    // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:78:20: ( PLUS | MOINS )
            	    int alt2=2;
            	    int LA2_0 = input.LA(1);

            	    if ( (LA2_0==PLUS) ) {
            	        alt2=1;
            	    }
            	    else if ( (LA2_0==MOINS) ) {
            	        alt2=2;
            	    }
            	    else {
            	        NoViableAltException nvae =
            	            new NoViableAltException("", 2, 0, input);

            	        throw nvae;
            	    }
            	    switch (alt2) {
            	        case 1 :
            	            // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:78:21: PLUS
            	            {
            	            PLUS7=(Token)match(input,PLUS,FOLLOW_PLUS_in_sumExpr471); 
            	            PLUS7_tree = (Object)adaptor.create(PLUS7);
            	            root_0 = (Object)adaptor.becomeRoot(PLUS7_tree, root_0);


            	            }
            	            break;
            	        case 2 :
            	            // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:78:27: MOINS
            	            {
            	            MOINS8=(Token)match(input,MOINS,FOLLOW_MOINS_in_sumExpr474); 
            	            MOINS8_tree = (Object)adaptor.create(MOINS8);
            	            root_0 = (Object)adaptor.becomeRoot(MOINS8_tree, root_0);


            	            }
            	            break;

            	    }

            	    pushFollow(FOLLOW_multExpr_in_sumExpr478);
            	    multExpr9=multExpr();

            	    state._fsp--;

            	    adaptor.addChild(root_0, multExpr9.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "sumExpr"

    public static class multExpr_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "multExpr"
    // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:80:1: multExpr : powExpr ( ( MULT | DIV ) powExpr )* ;
    public final LogoParser.multExpr_return multExpr() throws RecognitionException {
        LogoParser.multExpr_return retval = new LogoParser.multExpr_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token MULT11=null;
        Token DIV12=null;
        LogoParser.powExpr_return powExpr10 = null;

        LogoParser.powExpr_return powExpr13 = null;


        Object MULT11_tree=null;
        Object DIV12_tree=null;

        try {
            // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:80:10: ( powExpr ( ( MULT | DIV ) powExpr )* )
            // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:80:12: powExpr ( ( MULT | DIV ) powExpr )*
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_powExpr_in_multExpr488);
            powExpr10=powExpr();

            state._fsp--;

            adaptor.addChild(root_0, powExpr10.getTree());
            // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:80:20: ( ( MULT | DIV ) powExpr )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( ((LA5_0>=MULT && LA5_0<=DIV)) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:80:21: ( MULT | DIV ) powExpr
            	    {
            	    // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:80:21: ( MULT | DIV )
            	    int alt4=2;
            	    int LA4_0 = input.LA(1);

            	    if ( (LA4_0==MULT) ) {
            	        alt4=1;
            	    }
            	    else if ( (LA4_0==DIV) ) {
            	        alt4=2;
            	    }
            	    else {
            	        NoViableAltException nvae =
            	            new NoViableAltException("", 4, 0, input);

            	        throw nvae;
            	    }
            	    switch (alt4) {
            	        case 1 :
            	            // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:80:22: MULT
            	            {
            	            MULT11=(Token)match(input,MULT,FOLLOW_MULT_in_multExpr492); 
            	            MULT11_tree = (Object)adaptor.create(MULT11);
            	            root_0 = (Object)adaptor.becomeRoot(MULT11_tree, root_0);


            	            }
            	            break;
            	        case 2 :
            	            // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:80:28: DIV
            	            {
            	            DIV12=(Token)match(input,DIV,FOLLOW_DIV_in_multExpr495); 
            	            DIV12_tree = (Object)adaptor.create(DIV12);
            	            root_0 = (Object)adaptor.becomeRoot(DIV12_tree, root_0);


            	            }
            	            break;

            	    }

            	    pushFollow(FOLLOW_powExpr_in_multExpr499);
            	    powExpr13=powExpr();

            	    state._fsp--;

            	    adaptor.addChild(root_0, powExpr13.getTree());

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "multExpr"

    public static class powExpr_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "powExpr"
    // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:82:1: powExpr : atom ( EXP atom )* ;
    public final LogoParser.powExpr_return powExpr() throws RecognitionException {
        LogoParser.powExpr_return retval = new LogoParser.powExpr_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token EXP15=null;
        LogoParser.atom_return atom14 = null;

        LogoParser.atom_return atom16 = null;


        Object EXP15_tree=null;

        try {
            // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:82:9: ( atom ( EXP atom )* )
            // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:82:11: atom ( EXP atom )*
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_atom_in_powExpr509);
            atom14=atom();

            state._fsp--;

            adaptor.addChild(root_0, atom14.getTree());
            // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:82:16: ( EXP atom )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==EXP) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:82:17: EXP atom
            	    {
            	    EXP15=(Token)match(input,EXP,FOLLOW_EXP_in_powExpr512); 
            	    EXP15_tree = (Object)adaptor.create(EXP15);
            	    root_0 = (Object)adaptor.becomeRoot(EXP15_tree, root_0);

            	    pushFollow(FOLLOW_atom_in_powExpr515);
            	    atom16=atom();

            	    state._fsp--;

            	    adaptor.addChild(root_0, atom16.getTree());

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "powExpr"

    public static class atom_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "atom"
    // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:84:1: atom : ( INT | PO expr PF | useID );
    public final LogoParser.atom_return atom() throws RecognitionException {
        LogoParser.atom_return retval = new LogoParser.atom_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token INT17=null;
        Token PO18=null;
        Token PF20=null;
        LogoParser.expr_return expr19 = null;

        LogoParser.useID_return useID21 = null;


        Object INT17_tree=null;
        Object PO18_tree=null;
        Object PF20_tree=null;

        try {
            // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:84:5: ( INT | PO expr PF | useID )
            int alt7=3;
            switch ( input.LA(1) ) {
            case INT:
                {
                alt7=1;
                }
                break;
            case PO:
                {
                alt7=2;
                }
                break;
            case COLON:
                {
                alt7=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;
            }

            switch (alt7) {
                case 1 :
                    // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:84:7: INT
                    {
                    root_0 = (Object)adaptor.nil();

                    INT17=(Token)match(input,INT,FOLLOW_INT_in_atom524); 
                    INT17_tree = (Object)adaptor.create(INT17);
                    adaptor.addChild(root_0, INT17_tree);


                    }
                    break;
                case 2 :
                    // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:85:9: PO expr PF
                    {
                    root_0 = (Object)adaptor.nil();

                    PO18=(Token)match(input,PO,FOLLOW_PO_in_atom535); 
                    pushFollow(FOLLOW_expr_in_atom538);
                    expr19=expr();

                    state._fsp--;

                    adaptor.addChild(root_0, expr19.getTree());
                    PF20=(Token)match(input,PF,FOLLOW_PF_in_atom540); 

                    }
                    break;
                case 3 :
                    // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:86:9: useID
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_useID_in_atom552);
                    useID21=useID();

                    state._fsp--;

                    adaptor.addChild(root_0, useID21.getTree());

                          if(!tabVar.containsKey((useID21!=null?useID21.varNom:null))) {
                            setValide(false);
                            Log.appendnl("Variable is not initialized!");
                            }
                          

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "atom"

    public static class boolExpr_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "boolExpr"
    // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:94:1: boolExpr : expr ( SUP | INF | EQU | SUPEQU | INFEQU ) expr ;
    public final LogoParser.boolExpr_return boolExpr() throws RecognitionException {
        LogoParser.boolExpr_return retval = new LogoParser.boolExpr_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token SUP23=null;
        Token INF24=null;
        Token EQU25=null;
        Token SUPEQU26=null;
        Token INFEQU27=null;
        LogoParser.expr_return expr22 = null;

        LogoParser.expr_return expr28 = null;


        Object SUP23_tree=null;
        Object INF24_tree=null;
        Object EQU25_tree=null;
        Object SUPEQU26_tree=null;
        Object INFEQU27_tree=null;

        try {
            // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:94:9: ( expr ( SUP | INF | EQU | SUPEQU | INFEQU ) expr )
            // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:94:11: expr ( SUP | INF | EQU | SUPEQU | INFEQU ) expr
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_expr_in_boolExpr562);
            expr22=expr();

            state._fsp--;

            adaptor.addChild(root_0, expr22.getTree());
            // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:94:16: ( SUP | INF | EQU | SUPEQU | INFEQU )
            int alt8=5;
            switch ( input.LA(1) ) {
            case SUP:
                {
                alt8=1;
                }
                break;
            case INF:
                {
                alt8=2;
                }
                break;
            case EQU:
                {
                alt8=3;
                }
                break;
            case SUPEQU:
                {
                alt8=4;
                }
                break;
            case INFEQU:
                {
                alt8=5;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 8, 0, input);

                throw nvae;
            }

            switch (alt8) {
                case 1 :
                    // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:94:17: SUP
                    {
                    SUP23=(Token)match(input,SUP,FOLLOW_SUP_in_boolExpr565); 
                    SUP23_tree = (Object)adaptor.create(SUP23);
                    root_0 = (Object)adaptor.becomeRoot(SUP23_tree, root_0);


                    }
                    break;
                case 2 :
                    // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:94:22: INF
                    {
                    INF24=(Token)match(input,INF,FOLLOW_INF_in_boolExpr568); 
                    INF24_tree = (Object)adaptor.create(INF24);
                    root_0 = (Object)adaptor.becomeRoot(INF24_tree, root_0);


                    }
                    break;
                case 3 :
                    // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:94:27: EQU
                    {
                    EQU25=(Token)match(input,EQU,FOLLOW_EQU_in_boolExpr571); 
                    EQU25_tree = (Object)adaptor.create(EQU25);
                    root_0 = (Object)adaptor.becomeRoot(EQU25_tree, root_0);


                    }
                    break;
                case 4 :
                    // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:94:32: SUPEQU
                    {
                    SUPEQU26=(Token)match(input,SUPEQU,FOLLOW_SUPEQU_in_boolExpr574); 
                    SUPEQU26_tree = (Object)adaptor.create(SUPEQU26);
                    root_0 = (Object)adaptor.becomeRoot(SUPEQU26_tree, root_0);


                    }
                    break;
                case 5 :
                    // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:94:40: INFEQU
                    {
                    INFEQU27=(Token)match(input,INFEQU,FOLLOW_INFEQU_in_boolExpr577); 
                    INFEQU27_tree = (Object)adaptor.create(INFEQU27);
                    root_0 = (Object)adaptor.becomeRoot(INFEQU27_tree, root_0);


                    }
                    break;

            }

            pushFollow(FOLLOW_expr_in_boolExpr581);
            expr28=expr();

            state._fsp--;

            adaptor.addChild(root_0, expr28.getTree());

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "boolExpr"

    public static class defID_return extends ParserRuleReturnScope {
        public String varNom;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "defID"
    // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:96:1: defID returns [String varNom] : QUOT ID ;
    public final LogoParser.defID_return defID() throws RecognitionException {
        LogoParser.defID_return retval = new LogoParser.defID_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token QUOT29=null;
        Token ID30=null;

        Object QUOT29_tree=null;
        Object ID30_tree=null;

        try {
            // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:96:30: ( QUOT ID )
            // D:\\workspace\\tp2\\src\\logoparsing\\Logo.g:97:1: QUOT ID
            {
            root_0 = (Object)adaptor.nil();

            QUOT29=(Token)match(input,QUOT,FOLLOW_QUOT_in_defID594); 
            QUOT29_tree = (Object)adaptor.create(QUOT29);
            root_0 = (Object)adaptor.becomeRoot(QUOT29_tree, root_0);

            ID30=(Token)match(input,ID,FOLLOW_ID_in_defID597); 
            ID30_tree = (Object)adaptor.create(ID30);
            adaptor.addChild(root_0, ID30_tree);

            retval.varNom = (ID30!=null?ID30.getText():null);

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "defID"

    public static class useID_return extends ParserRuleReturnScope {
        public String varNom;
        Object tree;
        public Object getTree() { return tree; }
    };
